[package]
name = "injective-nft"
version = "1.0.0"
authors = ["Injective Punks <41551149+ninja0x-dev@users.noreply.github.com>"]
edition = "2018"
description = "Injective Punks!"
license = "Apache-2.0"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
bincode = "1.3.3"
cw2 = { version = "0.14.0" }
cw20 = { version = "0.14.0" }
cw20-base = "0.14.0"
cw721 = "0.13.4"
cw-utils = "0.14.0"
cosmwasm-std = { version = "1.0.0-rc.0", features = ["iterator", "abort"] }
cosmwasm-storage = { version = "1.0.0-rc.0", features = ["iterator"] }
cw-storage-plus = { version = "0.13.2" }
schemars = "0.8.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-rc.0" }
